syntax = "proto3";

package c1.reader.v2;

import "c1/connector/v2/entitlement.proto";
import "c1/connector/v2/grant.proto";
import "c1/connector/v2/resource.proto";
import "google/protobuf/any.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/conductorone/baton-sdk/pb/c1/reader/v2";

service GrantsReaderService {
  rpc GetGrant(GrantsReaderServiceGetGrantRequest) returns (GrantsReaderServiceGetGrantResponse);
  rpc ListGrantsForEntitlement(GrantsReaderServiceListGrantsForEntitlementRequest) returns (GrantsReaderServiceListGrantsForEntitlementResponse);
  rpc ListGrantsForResourceType(GrantsReaderServiceListGrantsForResourceTypeRequest) returns (GrantsReaderServiceListGrantsForResourceTypeResponse);
}

message GrantsReaderServiceGetGrantRequest {
  string grant_id = 1 [(buf.validate.field).string = {
    min_bytes: 1
    max_bytes: 1024
  }];
  repeated google.protobuf.Any annotations = 2;
}

message GrantsReaderServiceGetGrantResponse {
  c1.connector.v2.Grant grant = 1;
}

message GrantsReaderServiceListGrantsForEntitlementRequest {
  c1.connector.v2.Entitlement entitlement = 1 [(buf.validate.field) = {required: true}];
  c1.connector.v2.ResourceId principal_id = 5 [(buf.validate.field) = {required: false}];
  uint32 page_size = 2 [(buf.validate.field).uint32 = {
    lte: 250
  }, (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE];
  string page_token = 3 [(buf.validate.field).string = {
    min_bytes: 1
    max_bytes: 2048
  }, (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE];
  repeated google.protobuf.Any annotations = 4;
}

message GrantsReaderServiceListGrantsForEntitlementResponse {
  repeated c1.connector.v2.Grant list = 1;
  string next_page_token = 2 [(buf.validate.field).string = {
    min_bytes: 1
    max_bytes: 2048
  }, (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE];
}

message GrantsReaderServiceListGrantsForResourceTypeRequest {
  string resource_type_id = 1 [(buf.validate.field).string = {
    min_bytes: 1
    max_bytes: 2048
  }, (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE];
  uint32 page_size = 2 [(buf.validate.field).uint32 = {
    lte: 250
  }, (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE];
  string page_token = 3 [(buf.validate.field).string = {
    min_bytes: 1
    max_bytes: 2048
  }, (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE];
  repeated google.protobuf.Any annotations = 4;
}

message GrantsReaderServiceListGrantsForResourceTypeResponse {
  repeated c1.connector.v2.Grant list = 1;
  string next_page_token = 2 [(buf.validate.field).string = {
    min_bytes: 1
    max_bytes: 2048
  }, (buf.validate.field).ignore = IGNORE_IF_ZERO_VALUE];
}
